4.0
	+ Set version to 4.0
3.5.1
	+ Workaround in members table against losing of directory parameter/attribute
3.5
	+ Implement replicationExcludeKeys() to avoid webadmin service replication
	+ Set version to 3.5
3.4
	+ Added portUsedByService method
	+ Updated to use the new haproxy API
	+ Set version to 3.4
3.3
	+ Switch from Error to TryCatch for exception handling
	+ Added missing EBox::Exceptions uses
	+ Set version to 3.3
3.2
	+ Set version to 3.2
3.1.3
	+ Added ICMP service by default
3.1.2
	+ Added menu icon
	+ Fixed bug in iptables arguments for TCP/UDP ports in EBox::Services::serviceIptablesArgs
3.1.1
	+ Create HTTPS service by default to help firewall configuration on
	  non-transparent HTTP proxy scenarios
3.1
	+ Updated to reflect the Apache -> WebAdmin rename.
	+ Depend on zentyal-core 3.1
3.0.2
	+ Removed override of unused method EBox::Model::DataTable::_tailoredOrder
3.0.1
	+ Remove unique in printableName to avoid problems with i18n
2.3.8
	+ Forbid to user to create equivalents to any tcp/udp,tcp,udp services
2.3.7
	+ Added serviceIptablesArgs method
2.3.6
	+ Adapted to new Model management framework
2.3.5
	+ setService method does not fail if the existent service has not
	  any configuration
	+ Added clone action to service configuration table
2.3.4
	+ Packaging fixes for precise
2.3.2
	+ Now name is just an internal id, it is optional and hidden and defaults
	  to printableName in case of services manually added by the user
	+ Better printableNames for default services
	+ Service names are now translatable
2.3.1
	+ Updated Standard-Versions to 3.9.2
2.3
	+ Replaced autotools with zbuildtools
2.1.7
	+ Removed /zentyal prefix from URLs
2.1.6
	+ Fixed problems adding portless protocols such as ICMP
	+ Removed validateTypedRow as it is unnecessary with viewCustomizer
2.1.5
	+ Single port is selected by default for the destination port field
2.1.4
	+ New 'allowEmpty' parameter on setMultipleService to allow empty services
2.1.3