@@ -1,4 +1,6 @@
 4.0
+	+ Re-introduce setAdministrationPort to integrate with webadmin
+	  module
 	+ Set version to 4.0
 3.5.1
 	+ Workaround in members table against losing of directory parameter/attribute
